@@ -3188,7 +3188,7 @@
             <property name="minimum_size"></property>
             <property name="name">PlayerPanel</property>
             <property name="pos"></property>
-            <property name="size">-1,-1</property>
+            <property name="size">305,462</property>
             <property name="subclass"></property>
             <property name="tooltip"></property>
             <property name="window_extra_style"></property>
@@ -3880,7 +3880,7 @@
                             <property name="flag">wxEXPAND | wxALL</property>
                             <property name="proportion">1</property>
                             <object class="wxPanel" expanded="0">
-                                <property name="bg">wxSYS_COLOUR_GRAYTEXT</property>
+                                <property name="bg">wxSYS_COLOUR_WINDOWFRAME</property>
                                 <property name="context_help"></property>
                                 <property name="enabled">1</property>
                                 <property name="fg"></property>
@@ -4040,7 +4040,7 @@
                                         </object>
                                     </object>
                                     <object class="sizeritem" expanded="1">
-                                        <property name="border">1</property>
+                                        <property name="border">2</property>
                                         <property name="flag">wxALL|wxEXPAND</property>
                                         <property name="proportion">1</property>
                                         <object class="wxListCtrl" expanded="1">
@@ -4062,7 +4062,7 @@
                                             <property name="tooltip"></property>
                                             <property name="window_extra_style"></property>
                                             <property name="window_name"></property>
-                                            <property name="window_style"></property>
+                                            <property name="window_style">wxSUNKEN_BORDER</property>
                                             <event name="OnChar"></event>
                                             <event name="OnEnterWindow"></event>
                                             <event name="OnEraseBackground"></event>
